[package]
name = "psvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
fimg = "0.4.16"
tiny-skia-path = "0.11.2"
usvg = { version = "0.36.0", default-features = false }

[profile.release]
debug = 2
opt-level = 3
lto = "thin"
incremental = true
